--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,7 @@
 .profile__avatar {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100%;
   width: 120px;
   height: 120px;
   object-fit: cover;
