--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,9 @@
 .profile__avatar {
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   width: 120px;
-  height: 120px;
-  object-fit: cover;
+  height: 120px;  
   border-radius: 50%;
   opacity: 1;
   transition: 0.3s ease;
